Clean up + regression tile progress added.